// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Loader Loader Center 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 iUFAlD Flexweb__Flex-sc-1yhcoea-0 hPckKI"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Loader__StyledLoader-sc-18rhxgm-0 gZPbHp Sizeweb__Size-sc-1e5yf1-0 fkEnIw"
              role="loader"
            />
          </div>
        </div>
        <div
          data-testid="layerTestId"
          id="layerHost"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Loader Loader Default 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Loader__StyledLoader-sc-18rhxgm-0 gZPbHp Sizeweb__Size-sc-1e5yf1-0 fkEnIw"
            role="loader"
          />
        </div>
        <div
          data-testid="layerTestId"
          id="layerHost"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Loader Loader Full Page 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Loader__FullPageView-sc-18rhxgm-1 nVPNj Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Loader__StyledLoader-sc-18rhxgm-0 gZPbHp Sizeweb__Size-sc-1e5yf1-0 fkEnIw"
              role="loader"
            />
          </div>
        </div>
        <div
          data-testid="layerTestId"
          id="layerHost"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;
